--- a/package.json
+++ b/package.json
@@ -6,18 +6,25 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "json-server -d 750 -p 3333 -w ./server.js"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^12.1.0",
+    "lodash": "^4.17.21",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-virtualized": "^9.22.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.178",
     "@types/node": "17.0.18",
     "@types/react": "17.0.39",
+    "@types/react-virtualized": "^9.21.19",
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0",
+    "json-server": "^0.17.0",
     "typescript": "4.5.5"
   }
 }
